feat: add endpoints and tests for change username
