# src/main/java/com/VLmb/ai_tutor_backend/dto/ChangeUsernameRequest.java
@@ -1,0 +1,11 @@
+package com.VLmb.ai_tutor_backend.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+
+public record ChangeUsernameRequest(
+        @NotBlank
+        @Size(min = 3, max = 50)
+        String userName
+) {
+}
