# src/main/java/com/VLmb/ai_tutor_backend/dto/ChangeUsernameResponse.java
@@ -1,0 +1,7 @@
+package com.VLmb.ai_tutor_backend.dto;
+
+public record ChangeUsernameResponse(
+        Long userId,
+        String userName
+) {
+}
